feat: 增加设置页设置测速地址
